[package]
name = "taos"
version = "0.1.0"
authors = ["Mateusz Tomaszkiewicz <ressetpublic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = true
lto = true
